fix input component issue on safari

--- a/src/components/ui/input/style.module.scss
+++ b/src/components/ui/input/style.module.scss
@@ -17,7 +17,7 @@
 	label {
 		position: absolute;
 		top: 50%;
-		transform: translate(0, -50%);
+		transform: translateY(-50%);
 		left: 12px;
 		font-size: 0.8rem;
 		color: #aaa;
@@ -25,7 +25,8 @@
 		pointer-events: none;
 	}
 
-	input:focus + label,
+	/* Fix for Safari */
+	&:focus-within label,
 	input:not(:placeholder-shown) + label {
 		top: -1rem;
 		left: 0;
